syntax = "proto3";

option go_package = "./;product";

package product;

// 定义request model
message ProductRequest {
    int32 prod_id = 1;
}

//定义response model
message ProductResponse {
    int32 prod_stock = 1;
}

//定义服务主体
service ProdService {
    //定义方法 格式  rpc MethodName(请求参数) returns (返回参数)
    rpc GetProductStock(ProductRequest) returns (ProductResponse);
}

